# claude-auto-skill

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  FINAL_STATUS.md  FLOW.md  LINEAR_TASKS_UPDATED.md  LINEAR_VERIFICATION.sh  MANIFEST.in  MIGRATION_PLAN.md  PLANNING_SETUP.md  PR_DESCRIPTION.md  PR_READY_FOR_REVIEW.md  PYPI_PUBLISHING.md  README.md  REVIEW.md  UPDATE_PATHS.sh  V2_COMPLETION_SUMMARY.md  eslint.config.js  install-cli.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  requirements.txt  start-web.bat  start-web.sh  tsconfig.json  verify_installation.py
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
commands/: cli.py  discover.py  init.py  load-skill.md  review-patterns.md  status.md
core/: __init__.py  config.py  event_store.py  graduation_manager.py  lsp_analyzer.py  migrations.py  pattern_detector.py  session_analyzer.py  skill_generator.py  skillssh_publisher.py  telemetry.py  unified_suggester.py
docs/: changelog.md  contributing.md  faq.md  index.md
docs/assets/: SCREENSHOTS.md
docs/development/: DELIVERABLES.md  MERGE_CHECKLIST.md  README_V2.md  RELOCATION_COMPLETE.md  TASK_COMPLETE.md  V2_IMPLEMENTATION.md
docs/features/: external-discovery.md  graduation.md  mental-model.md  overview.md  pattern-detection.md  publishing.md  session-analysis.md  web-ui.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guide/: best-practices.md  cli-commands.md  workflows.md
docs/reference/: api.md  architecture.md  config.md
examples/: README.md  hybrid_discovery_example.py
hooks/: hooks.json  observer.py
references/: registry.json
skills/: SKILL.md  install-cli.sh
src/: index.ts
src/cli/: factory.ts  index.ts
src/cli/commands/: agents.ts  discover.ts  graduate.ts  init.ts  lock.ts  telemetry.ts
src/core/: agent-registry.ts  config.ts  db.ts  design-pattern-detector.ts  event-store.ts  graduation-manager.ts  lock-file.ts  mental-analyzer.ts  migrations.ts  path-security.ts  pattern-detector.ts  sequence-matcher.ts  session-analyzer.ts  skill-generator.ts  skill-store.ts  skill-tracker.ts  skillssh-client.ts  spec-validator.ts  telemetry.ts  unified-suggester.ts
src/core/providers/: base.ts  index.ts  local-provider.ts  manager.ts  skillssh-provider.ts  wellknown-provider.ts
src/formatter/: index.ts
src/hooks/: hooks.json  observer.ts
src/mcp/: index.ts  server.ts
src/types/: index.ts
src/util/: atomic-write.ts  fs.ts  fts.ts  ulid.ts
src/web/: app.ts  index.ts  server.ts
tests/: __init__.py  agent-registry.test.ts  config.test.ts  design-pattern-detector.test.ts  edge-cases.test.ts  formatter.test.ts  lock-file.test.ts  path-security.test.ts  pattern-detector.test.ts  sequence-matcher.test.ts  session-analyzer.test.ts  spec-validator.test.ts  telemetry.test.ts
web/: README.md  app.py  start-web.sh
web/templates/: index.html
website/: docusaurus.config.ts
website/docs/: intro.md
website/docs/features/: agent-registry.md  cli.md  providers.md  security.md  telemetry.md
website/docs/getting-started/: configuration.md  installation.md  quick-start.md
website/docs/how-it-works/: architecture.md  discovery.md  pattern-detection.md  skill-generation.md
